this commit for add money form

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <span class="label-text">Pin Code</span>
                       </label>
                       <input
+                        id="pin_input"
                         type="pin"
                         placeholder="Your Pin Code"
                         class="input input-bordered"
@@ -64,6 +65,7 @@
       </div>
     </main>
 
+    <!-- script files path -->
     <script src="js/login.js"></script>
   </body>
 </html>
