--- a/home.html
+++ b/home.html
@@ -26,13 +26,16 @@
             <div class="divider"></div>
             <!-- user action button -->
             <div>
-              <button class="btn btn-lg">Add Money</button>
-              <button class="btn btn-lg">Cash Out</button>
+              <button id="btn_show_addMoney" class="btn btn-lg">
+                Add Money
+              </button>
+              <button id="show_cash-out" class="btn btn-lg">Cash Out</button>
             </div>
             <div class="divider"></div>
             <!-- add money form start -->
             <div
-              class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+              id="add_money_form"
+              class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
               <form class="card-body">
                 <div class="form-control">
                   <label class="label">
@@ -65,7 +68,9 @@
             </div>
             <!-- add money form end -->
             <!-- cash out start  -->
-            <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+            <div
+              id="cash_out_form"
+              class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
               <form class="card-body">
                 <div class="form-control">
                   <label class="label">
@@ -74,7 +79,7 @@
                   <input
                     id="cash_out_input"
                     type="text"
-                    placeholder="Amount"
+                    placeholder="Cash Out Amount"
                     class="input input-bordered"
                     autocomplete="off" />
                 </div>
@@ -105,5 +110,6 @@
     <!-- <script src="js/home.js"></script> -->
     <script src="js/addMoney.js"></script>
     <script src="js/cashOut.js"></script>
+    <script src="js/features.js"></script>
   </body>
 </html>
